# i-melt

./: .gitignore  .ipynb  .readthedocs.yaml  Alumina_viscosity_curve.ipynb  Cp_test.ipynb  Dataset_Preparation.ipynb  Dataset_Visualization.ipynb  Dataset_preparation.ipynb  Dataset_visualization_Fig1.ipynb  Dataset_visualization_FigS1.ipynb  Example_Prediction_OneComposition.ipynb  Example_entropy_calculations.ipynb  Example_prediction_SelectedCompositions.ipynb  Example_prediction_ternary.ipynb  Exp_arch_results.ipynb  Exp_multitask_results.ipynb  Exp_trainsize_results.ipynb  Experiment_1_architecture.ipynb  Experiment_1_architecture.py  Experiment_2_dataset_size.ipynb  Experiment_2_dataset_size.py  Flux-BeS.ipynb  Flux-Copy1.ipynb  Flux-modelselection.ipynb  Flux.ipynb  Flux_master.jl  Flux_multipletrain.jl  Flux_network_arch_experiment.jl  Flux_predict.ipynb  Flux_singletrain.jl  Flux_size_training_experiment.jl  For_medium_post.ipynb  LICENSE  NEWS.md  Predict_6010.ipynb  Prediction_simple.ipynb  Prepare_Data.ipynb  Pytorch_arch_experiment.py  Pytorch_datasetsize_exp.ipynb  Pytorch_loss_experiment.ipynb  (+43 more)
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: Cp_test-checkpoint.ipynb  Flux-BeS-checkpoint.ipynb  Flux-checkpoint.ipynb  Flux-modelselection-checkpoint.ipynb  Flux_predict-checkpoint.ipynb  Load_Predicts_noCp-checkpoint.ipynb  Load_Predicts_withCp-checkpoint.ipynb  Prepare_Data-checkpoint.ipynb  Tensorflow_Prepare_Data-checkpoint.ipynb  Tensorflow_load_predicts-checkpoint.ipynb  Tensorflow_train-checkpoint.ipynb  Tensorflow_train_AG-checkpoint.ipynb  (+6 more)
(+1288 files in other folders)
